--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
-    <body class="d-flex flex-column min-vh-100" data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+    <body class="d-flex flex-column min-vh-100">
         <!-- Sticky Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top py-1 px-1">
           <div class="container-fluid">
