initial setup for project section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Personal Portfolio | Lau Pikk Heang</title>
+        <title>Personal Portfolio | Pikk Heang Lau | JohnnyLPH</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -20,7 +20,7 @@
 
     <body class="d-flex flex-column min-vh-100">
         <!-- Sticky Navbar -->
-        <nav class="navbar navbar-expand-sm navbar-dark sticky-top py-1 px-1">
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top py-1 px-1 shadow">
           <div class="container-fluid">
             <a class="navbar-brand py-0" href="#home">
               <img src="./img/LPH_SelfPortrait.jpg" alt="Logo" style="width: 40px;" class="rounded-pill">
@@ -67,7 +67,7 @@
                 </div>
 
                 <!-- Portrait -->
-                <div class="col-lg-3 col-md-4 col-sm-6 col-7 order-md-2 order-1 p-2 d-flex align-items-center">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-7 order-md-2 order-1 p-2">
                     <img class="rounded-pill img-fluid w-100" src="./img/LPH_SelfPortrait.jpg" alt="Self Portrait">
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <!-- Bachelor's Degree -->
                 <div class="col-lg-9 col-md-11 col-sm-10 col-12 py-2 px-3">
                     <div class="row p-0 m-0">
-                        <div class="card">
+                        <div class="card shadow-sm">
                             <div class="card-body">
                                 <!-- General Info -->
                                 <div class="row p-0 m-0 d-flex justify-content-between">
@@ -113,7 +113,7 @@
                 <!-- STPM -->
                 <div class="col-lg-9 col-md-11 col-sm-10 col-12 py-2 px-3">
                     <div class="row p-0 m-0">
-                        <div class="card">
+                        <div class="card shadow-sm">
                             <div class="card-body">
                                 <!-- General Info -->
                                 <div class="row p-0 m-0 d-flex justify-content-between">
@@ -155,7 +155,7 @@
                         <!-- PHP -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/PHP" target="_blank" title="PHP (Hypertext Preprocessor)" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="I learned PHP at UNIMAS and taught myself Laravel framework for some of my web development projects." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-php fs-1 pb-2"></i>
                                         <p class="h6 m-0">PHP</p>
@@ -166,7 +166,7 @@
                         <!-- SQL -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/SQL" target="_blank" title="SQL (Structured Query Language)" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Exposure to Database Design and Concept course at UNIMAS helped me gain a deeper understanding of SQL and Database." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-database fs-1 pb-2"></i>
                                         <p class="h6 m-0">SQL</p>
@@ -177,7 +177,7 @@
                         <!-- MySQL -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/MySQL" target="_blank" title="MySQL" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="MySQL is used as the primary database management system (DBMS) in most of my web development projects." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-database fs-1 pb-2"></i>
                                         <p class="h6 m-0">MySQL</p>
@@ -188,7 +188,7 @@
                         <!-- JavaScript -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/JavaScript" target="_blank" title="JavaScript" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="JavaScript is primarily used for manipulating the Document Object Model (DOM) in web development." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-square-js fs-1 pb-2"></i>
                                         <p class="h6 m-0">JavaScript</p>
@@ -199,7 +199,7 @@
                         <!-- HTML -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/HTML" target="_blank" title="HTML5 (HyperText Markup Language)" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="HTML is used to define the basic structure of web pages." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-html5 fs-1 pb-2"></i>
                                         <p class="h6 m-0">HTML5</p>
@@ -210,7 +210,7 @@
                         <!-- CSS -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/CSS" target="_blank" title="CSS (Cascading Style Sheets)" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="CSS is used to style web pages. I often use the Bootstrap framework to create responsive websites such as my personal portfolio." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-css3-alt fs-1 pb-2"></i>
                                         <p class="h6 m-0">CSS</p>
@@ -221,7 +221,7 @@
                         <!-- Python -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank" title="Python" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="I have taught myself Python (Tkinter for simple GUI applications, brief experience with Flask for web development) before UNIMAS admission." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-python fs-1 pb-2"></i>
                                         <p class="h6 m-0">Python</p>
@@ -232,7 +232,7 @@
                         <!-- Java -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/Java_(programming_language)" target="_blank" title="Java" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Learned basic Java (for Android development) before going to UNIMAS. Java was also taught at UNIMAS, and I learned to create simple GUI desktop applications using the Swing library." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-brands fa-java fs-1 pb-2"></i>
                                         <p class="h6 m-0">Java</p>
@@ -243,7 +243,7 @@
                         <!-- C -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank" title="C Programming Language" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="C is an introductory Computer Science course taught at UNIMAS, primarily for developing command-line interface applications." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-laptop-code fs-1 pb-2"></i>
                                         <p class="h6 m-0">C</p>
@@ -254,7 +254,7 @@
                         <!-- C++ -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank" title="C++ Programming Language" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="UNIMAS introduces object-oriented software development using C++. Like C, C++ is used in various courses to build command-line interface applications." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-laptop-code fs-1 pb-2"></i>
                                         <p class="h6 m-0">C++</p>
@@ -265,7 +265,7 @@
                         <!-- UX -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/User_experience" target="_blank" title="UX (User Experience)" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="The Human Computer Interaction course at UNIMAS taught me how to achieve great UX in software." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-users fs-1 pb-2"></i>
                                         <p class="h6 m-0">UX</p>
@@ -276,7 +276,7 @@
                         <!-- Agile -->
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 p-1">
                             <a class="text-decoration-none text-body" href="https://en.wikipedia.org/wiki/Agile_software_development" target="_blank" title="Agile Software Development" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Most, if not all, of my software development projects use agile practices to deliver a high standard application in a short period of time. Agile Software Development was introduced very early at UNIMAS, with Rapid Application Development (RAD) being the most used agile methodology across all semesters." data-bs-placement="bottom">
-                                <div class="card text-center">
+                                <div class="card shadow-sm text-center">
                                     <div class="card-body">
                                         <i class="fa-solid fa-arrows-spin fs-1 pb-2"></i>
                                         <p class="h6 m-0">Agile</p>
@@ -292,7 +292,40 @@
             <div id="project" class="row pt-5 d-flex justify-content-center">
                 <div class="col-lg-9 col-md-11 col-sm-10 col-12 py-2 px-4">
                     <h2>Featured Projects:</h2>
-                    
+                </div>
+
+                <!-- List of Projects -->
+                <div class="col-lg-9 col-md-11 col-sm-10 col-12 py-2 px-2">
+                    <div class="row p-0 m-0 d-flex justify-content-center px-1">
+                        <!-- Tree Profiling Management System -->
+                        <!-- https://github.com/JohnnyLPH/UNI_CSSE_Year2_Sem2_DatabaseConceptAndDesign_Project_1 -->
+                        <div class="col-lg-4 col-md-4 col-6 p-1">
+                            <a class="text-decoration-none text-body" href="https://github.com/JohnnyLPH/UNI_CSSE_Year2_Sem2_DatabaseConceptAndDesign_Project_1" target="_blank">
+                                <div class="card shadow-sm text-center">
+                                    <img class="card-img-top w-50 mx-auto my-2" src="./img/Projects/TreeProfilingManagementSystem_Icon.png" alt="Tree Profiling Management System">
+                                    <div class="card-body">
+                                        <span class="badge rounded-pill bg-info">2022</span>
+                                        <p class="h6 m-0">Tree Profiling Management System</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Health Diary Application -->
+                    <!-- https://github.com/JohnnyLPH/UNI_CSSE_Year2_Sem2_JavaProgramming_Project_1 -->
+
+                    <!-- Reworked LINGsCARS Website -->
+                    <!-- https://github.com/JohnnyLPH/UNI_CSSE_Year2_Sem1_WebBasedSystemDevelopment_Project_1 -->
+
+                    <!-- Sudoku (with Solver) -->
+                    <!-- https://github.com/JohnnyLPH/SimpleGUI_SUDOKU -->
+
+                    <!-- Perplexed Maths Puzzle -->
+                    <!-- https://github.com/JohnnyLPH/PerplexedMathsPuzzle -->
+
+                    <!-- Connect 4 (Minimax AI) -->
+                    <!-- https://github.com/JohnnyLPH/SimpleGUI_Connect4 -->
                 </div>
             </div>
 
@@ -314,7 +347,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="mt-auto text-center py-4">
+        <footer class="mt-auto text-center py-4 shadow-sm">
             <div class="h5 mb-2">&#169; <strong>Pikk Heang Lau</strong>. All rights reserved.</div>
             <div class="h6 my-0">Developed by <a class="text-decoration-none" target="_blank" href="https://github.com/JohnnyLPH">Pikk Heang Lau (JohnnyLPH)</a></div>
         </footer>
