prepare skill.json

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </nav>
     
             <!-- Main Content -->
-            <main class="container-lg pb-5 d-flex flex-column justify-content-center">
+            <main class="container-lg pb-5">
                 <!-- About Me -->
                 <div id="about" class="row pt-5 d-flex justify-content-center">
                 </div>
