--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <nav class="navbar navbar-expand-sm navbar-dark sticky-top py-1 px-1 shadow">
               <div class="container-fluid">
                 <a class="navbar-brand py-0" href="#about">
-                  <img src="./img/LPH_SelfPortrait.jpg" alt="Logo" style="width: 40px;" class="rounded-pill">
+                  <img src="./img/LPH_SelfPortrait.jpg" alt="Logo" class="rounded-pill navbar-img">
                 </a>
                 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleBar">
+                <button class="navbar-toggler" type="button" aria-label="Dropdown" data-bs-toggle="collapse" data-bs-target="#collapsibleBar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="collapsibleBar" class="collapse navbar-collapse">
