--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Personal Portfolio | Pikk Heang Lau | JohnnyLPH</title>
+        <title>Pikk Heang Lau | JohnnyLPH | Personal Portfolio</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
