--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         <script src="./js/main.js" defer></script>
         <link rel="stylesheet" href="./css/main.css">
 
-        <!-- Google tag (gtag.js) -->
-        <script src="https://www.googletagmanager.com/gtag/js?id=G-F6ETMW5SL1" async></script>
+        <!-- Google Tag (gtag.js) -->
+        <script src="https://www.googletagmanager.com/gtag/js?id=G-7SLHKD9JR6" async></script>
         <script>
             window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
+            function gtag() {
+                dataLayer.push(arguments);
+            }
             gtag('js', new Date());
-            gtag('config', 'G-F6ETMW5SL1');
+            gtag('config', 'G-7SLHKD9JR6');
         </script>
 
         <!-- Font Awesome -->
